appearance align issue fix

--- a/src/app/modules/contracts/components/contract-expansion-panel/contract-expansion-panel.component.scss
+++ b/src/app/modules/contracts/components/contract-expansion-panel/contract-expansion-panel.component.scss
@@ -20,6 +20,12 @@
 .il-draggable-expansion {
   @include il-draggable-expansion;
 }
+
+.actions-col {
+  > div {
+    height: 50px;
+  }
+}
 ::ng-deep {
   .cdk-drag-preview {
     place-content: stretch flex-start;
@@ -28,8 +34,9 @@
     box-sizing: border-box;
     display: flex;
     height: 48px;
+    border-radius: 0 !important;
     > div {
-      width: 200px;
+      width: 40px;
     }
   }
 }
