--- a/src/app/modules/contracts/components/contract-overview-page/contract-overview-page.component.scss
+++ b/src/app/modules/contracts/components/contract-overview-page/contract-overview-page.component.scss
@@ -1,10 +1,13 @@
 @import "src/styleguide/shared";
 .dd-img {
   position: relative;
-  top: 25px;
+  top: 26px;
   left: 6px;
   z-index: 1;
   cursor: move;
+}
+.cdk-drag-preview {
+  border-radius: 0px;
 }
 .il-fab {
   @include il-fab;
@@ -13,5 +16,10 @@
   &.default {
     left: 95%;
     top: 75%;
+  }
+}
+::ng-deep {
+  .cdk-drag-preview {
+    border-radius: 0px;
   }
 }
